# ThumbHelper

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hellogl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hellogl/: ContentKits.java  HelloGLApplication.java  MainActivity.java  SpUtil.java
app/src/main/res/layout/: activity_main.xml  layout_thumb_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hellogl/: ExampleUnitTest.java
base_thumb/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
base_thumb/src/androidTest/java/com/example/base_thumb/: ExampleInstrumentedTest.java
base_thumb/src/main/cpp/: CMakeLists.txt
base_thumb/src/main/cpp/decoder/: FFMediaHelper.cpp  FFMediaHelper.hpp  FFMetaData.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.hpp
base_thumb/src/main/cpp/ffmpeg/: build_android_arm64-v8a_clang.sh  build_android_armeabi-v7a_clang.sh  config.txt
base_thumb/src/main/cpp/ffmpeg/examples/: resampling_audio.c
base_thumb/src/main/cpp/handler/: CMakeLists.txt  NHandlerThread.cpp  NativeHandler.cpp  NativeHandler.hpp  NativeLooper.cpp  NativeMessageQueue.cpp
base_thumb/src/main/cpp/jni/: JniInit.cpp  JniInit.hpp  com_example_base_thumb_decoder_FFmpegVideoDecoder.cpp  com_example_base_thumb_render_HelloEGLContext.cpp  com_example_base_thumb_render_HelloGLProgram.cpp  com_example_base_thumb_render_HelloGLSL.cpp  com_example_base_thumb_util_FFMediaHelper.cpp
base_thumb/src/main/cpp/render/: CMakeLists.txt  HelloEGLContext.cpp  HelloEGLContext.hpp  IGLContext.hpp
base_thumb/src/main/cpp/render/canvas/: CMakeLists.txt  ICanvas.cpp  ICanvas.hpp  YUVCanvas.cpp  YUVCanvas.hpp
base_thumb/src/main/cpp/render/entity/: AVFrameImage.cpp  AVFrameImage.hpp  TexImage.cpp  TexImage.hpp  TexImage.inl
base_thumb/src/main/cpp/render/program/: BlockGLProgram.cpp  BlockGLProgram.hpp  CropGLProgram.cpp  CropGLProgram.hpp  GLSLUtil.cpp  GLSLUtil.hpp  IGLProgram.cpp  IGLProgram.hpp  OESGLProgram.cpp  OESGLProgram.hpp  RGBAGLProgram.cpp  RGBAGLProgram.hpp  YUVGLProgram.cpp  YUVGLProgram.hpp
base_thumb/src/main/cpp/util/: CMakeLists.txt  FFUtil.cpp  FFUtil.hpp  LogUtil.cpp  LogUtil.hpp
base_thumb/src/main/res/raw/: block_fragment_3.glsl  block_vertex_3.glsl  compute_square.glsl  crop_fragment_2.glsl  oes_fragment_2.glsl  oes_fragment_3.glsl  oes_vertex_2.glsl  sampler2d_fragment_2.glsl  sampler2d_fragment_3.glsl  sampler2d_vertex_2.glsl  sampler2d_vertex_3.glsl  yuv_420_422_fragment_2.glsl  yuv_420_422_vertex_2.glsl
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
